** Release Notes

1.5.65
  * added --workflowName to pchain

1.5.64
  * fixed pyproject.toml
  * improved various messages

1.5.63
  * to check python3 if python is missing

1.5.62
  * protection against non-ASCII args

1.5.61
  * fixed changes in 1.5.60

1.5.60
  * fixed pathena -c

1.5.59
  * added update_events and get_events_status

1.5.58
  * set modules for unpickling in client-light

1.5.53
  * regex in outputs of prun

1.5.52
  * added pyproject.toml
  * introduced panda-client-light
  * added get_files_in_datasets

1.5.50
  * to recreate cpack tarball for subsequent file appending as gzip -d is not enough

1.5.49
  * not to ignore tar failures
  
1.5.48
  * pbook in batch mode

1.5.47
  * utilities for ID tokens

1.5.46
  * to skip cpack if the user doesn't have own build dir

1.5.45
  * removed -D CPACK_INSTALL_CMAKE_PROJECTS="" from cpack arguments

1.5.44
  * fixed --nFBPerMergeJob in pathena

1.5.43
  * fixed --nGBPerMergeJob in prun

1.5.42
  * added retry when checking sandbox files created by cpack

1.5.41
  * added secret-related methods to JobSpec

1.5.40
  * fixed delete_secret with file secrets

1.5.39
  * fixed --official in pchain

1.5.38
  * --help == --helpGroup ALL
  * low-level API to pause/resume tasks
  * protection against unrecognized arguments in prun
  * stripping role from workingGroup

1.5.37
  * fixed --official for OIDC
  * added json_outputs arg to idds command

1.5.36
  * fixed --inOutDsJson for python3

1.5.35
  * using OIDC_AUTH_* if PANDA_AUTH_* are missing

1.5.34
  * fixed pbook+token

1.5.33
  * fixed username extraction to get rid of emails

1.5.32
  * fixed nFiles+python3

1.5.31
  * added pbook.retry(all)

1.5.30
  * improved secondaryDSs to allow specifying input file list

1.5.29
  * added reload_input
  * gzip for python 2 and 3
  * to hide tokens in http requests

1.5.28
  * fixed for consolidate
  * added --persistentFile

1.5.27
  * added non-ascii file/dataset name check