@@ -111,7 +111,9 @@ class FileSpec(object):
         return ret
     updateExpression = classmethod(updateExpression)
 
-
-        
-
-                       
+    # dump to be json-serializable
+    def dump_to_json_serializable(self):
+        stat = self.__getstate__()[:-1]
+        # set None as _owner
+        stat.append(None)
+        return stat
