@@ -2,6 +2,9 @@
 
 1.5.65
   * added --workflowName to pchain
+  * added n_try in a few functions in Client
+  * removal of symlink creation in build step
+  * added json serializable
 
 1.5.64
   * fixed pyproject.toml
